--- a/css/scss/_section.scss
+++ b/css/scss/_section.scss
@@ -6,62 +6,14 @@
   margin: 0 auto;
   width: 90vw;
   border-bottom: 1px solid $primary-color--light;
-  padding: ($sm-space * 2) 0 ($lh-space * 2);
+  padding-top: ($sm-space * 2);
+  padding-bottom: ($lh-space * 2);
 
   @media screen and (min-width: $mq-md) {
     margin-left: auto;
     margin-right: auto;
     width: 80vw;
-    max-width: 60rem;
-  }
-}
-
-.section__list > li {
-  padding-top: $lh-space;
-}
-
-.section__title {
-  font-size: 2rem;
-  /* 
-   * line-height
-   * margin-top
-   * margin-bottom
-   */
-}
-
-.section__secondary-heading {
-  font-size: 0.875rem;
-  line-height: calc(#{$line-height} / 0.875);
-  margin-top: 1.0625rem;
-  margin-bottom: -1.0625rem;
-
-  font-family: $primary-font-stack;
-  font-weight: normal;
-  text-transform: uppercase;
-  letter-spacing: 0.13em;
-
-  color: $primary-color--light;
-}
-
-.section__primary-heading {
-  font-size: 1.125rem;
-  line-height: calc(#{$line-height} / 1.125);
-  margin-top: $lh-space;
-
-  em {
-    white-space: nowrap;
-  }
-}
-
-.section__img {
-  width: calc(100% + #{$sm-space * 2});
-  height: auto;
-  margin: ($lh-space * 2) ($sm-space * -1) 0;
-
-  @media screen and (min-width: $mq-md) {
-    width: calc(100% + #{$sm-space * 4});
-    margin-left: ($sm-space * -2);
-    margin-right: ($sm-space * -2);
+    max-width: 768 / 18.88 * 1em;
   }
 }
 
@@ -70,7 +22,7 @@
   background-color: #633730;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 50% 50%;
+  background-position: top center;
   color: #ffffff;
   width: 100%;
   max-width: 100%;
@@ -106,11 +58,61 @@
   padding: 0 5vw;
 
   @media screen and (min-width: $mq-md) {
-    padding-left: 40vw;
-    padding-right: 10vw;
-    max-width: 60rem;
+    padding-left: 300 / 18.88 * 1rem;
+    max-width: 768 / 18.88 * 1rem;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+.section__list > li {
+  padding-top: $lh-space;
+}
+
+.section__title {
+  font-size: 2rem;
+  /* 
+   * line-height
+   * margin-top
+   * margin-bottom
+   */
+}
+
+.section__secondary-heading {
+  font-size: 0.875rem;
+  line-height: calc(#{$line-height} / 0.875);
+
+  // vertical offset
+  position: relative;
+  top: ( 1.25em / 1.375 ) * $line-height;
+
+  font-family: $primary-font-stack;
+  font-weight: normal;
+  text-transform: uppercase;
+  letter-spacing: 0.13em;
+
+  color: $primary-color--light;
+}
+
+.section__primary-heading {
+  font-size: 1.125rem;
+  line-height: calc(#{$line-height} / 1.125);
+  margin-top: $lh-space;
+
+  em {
+    white-space: nowrap;
+  }
+}
+
+.section__img {
+  width: calc(100% + #{$sm-space * 2});
+  height: auto;
+  margin: ($lh-space * 2) ($sm-space * -1) 0;
+
+  @media screen and (min-width: $mq-md) {
+    width: calc(100% + #{$sm-space * 4});
+    margin-left: ($sm-space * -2);
+    margin-right: ($sm-space * -2);
   }
 }
 
